# mxmap.it

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  README.md  anomalie.html  data-regions.json  index.html  kpi.json  methodology.html  pyproject.toml  report.html  report.json  robots.txt  site.webmanifest  sitemap.xml  statistiche.html  storia.html  validation_report.csv
.claude/: launch.json
assets/: ente.css
config/: bounce.example.toml
data/: cloud_tenant_confidence.json  istat_comuni.json  it_istat_osm_crosswalk.json  it_istruzione_by_comune.json  it_provincial_backends.json  municipalities_it.json  research_targets.json
docs/: BOUNCE_VERIFIER_DESIGN.md  HISTORICIZATION_DESIGN.md  LOW_CONFIDENCE_CASES.md  PIPELINE_RECOVERY.md  ROADMAP.md  SEED_VALIDATION.md  STATS_KPI.md
flight-monitor/: .gitignore  README.md  config.yaml  pyproject.toml
flight-monitor/src/flightmon/: __init__.py  alerts.py  amadeus_client.py  chains.py  cli.py  config.py  corridor.py  dates.py  demo.py  models.py  monitor.py  pricer.py  store.py
flight-monitor/src/flightmon/providers/: __init__.py  amadeus.py  base.py  ryanair.py
flight-monitor/tests/: test_chains.py  test_dates.py  test_monitor.py  test_store.py
reports/: anac_cloud_2024.md  anac_cloud_trend_2022_2025.md  anac_subcontractor_chain.md  cloud_backend_reclassification.md  cloud_pa_2022_2025_FINALE.md  cloud_tenant_confidence.md  gateway_ita_analysis.md  hidden_backends.md  pnrr_cloud_completo.md  pnrr_cloud_spending.md  scuola_multi_domain_analysis.md
research/: FINAL_SYNTHESIS_22987_entities.md  aruba_cloud_schools_istruzione.md  batch2a_larger_pa.md  batch3a_cnp_inail.md  batch4a_schools_istruzione.md  cloud_providers_regional_pnr.md  google_aruba_pa_entities.md  google_workspace_italia.md  group_poste_cnr.md  health_universities_localgov.md  independent_local_isp_emails.md  poste_p1.md  regional_public_unknown_analysis.md  universities_banks_p1.md  unknown_classification_final.md
scripts/: _audit_all_categorie_coherence.py  _audit_l6_anomalies.py  _audit_scraped_mx_bug.py  _audit_summary.py  _check_aci_results.py  _check_l6_positive.py  _count_istruzione.py  _debug_polygon.py  _find_l6_false_negatives.py  _find_osm.py  _inspect_aoo_uo.py  _inspect_sanita.py  _lookup_asns.py  (+59 more)
(+426 files in other folders)
