[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxmap"
version = "0.1.0"
description = "Interactive map showing where Baltic municipalities (EE, LV, LT) host their email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.89.0",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.0",
]

[project.scripts]
preprocess = "mail_sovereignty.cli:preprocess"
postprocess = "mail_sovereignty.cli:postprocess"
validate = "mail_sovereignty.cli:validate"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_sovereignty"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.15.5",
    "pre-commit>=4.0",
    "topojson>=1.10",
    "geopandas>=1.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mail_sovereignty"]

[tool.coverage.report]
show_missing = true
# Ratchet floor (non target). Il fork IT ha aggiunto molto codice async di
# rete (postprocess scrape/SMTP, preprocess MX-discovery, smtp banner) che
# non era coperto, portando la copertura reale ~77%. Aggiunti pytest per il
# validatore (scrape_validator 94%) e la taxonomy (mx_discovery 100%) →
# 85%. Il floor 84 cattura le regressioni (nuovo codice non testato fa
# scendere sotto soglia) lasciando spazio alla risalita verso 90.
# Vedi task "Risalire coverage a 90%": testare postprocess/smtp/preprocess.
fail_under = 84
exclude_lines = [
    "pragma: no cover",
]
