[project]
name = "flightmon"
version = "0.1.0"
description = "Nordic budget flight price monitor for flexible 3-4 day trips"
requires-python = ">=3.10"
dependencies = [
    "ryanair-py>=2.3.0",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.scripts]
flightmon = "flightmon.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flightmon"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
